# SlideSight

./: .gitignore  CMakeLists.txt  README.md  azure-pipelines.yml
cmake/: FindFilesystem.cmake  FindOpenSlide.cmake
src/gui/: SlideModel.cpp  SlideModel.hpp  SlideView.cpp  SlideView.hpp  main.cpp  mainwindow.cpp  mainwindow.hpp
src/lib/: Filesystem.hpp  SightLib.cpp  SightLib.hpp  Slide.hpp  SlideData.cpp  SlideData.h  SlideData.hpp
tests/: TestSightLib.cpp  TestSlideData.cpp  TestSlideModel.cpp
